examples/test/testpolicy13672.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13672
  namespace: namespace32
spec:
  podSelector:
    matchLabels:
      key40: value4
      key8: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value5
          key5: value3
          key25: value36
      podSelector:
        matchLabels:
          key14: value36
          key38: value26
          key43: value46
